# Coursework-on-the-AIS

./: Dockerfile_poco  Dockerfile_poco_git  README.md  chat.sh  components.md  context.md  docker-compose.yaml  poco.sh  task.md  user.sh  wall.sh
chat/: .gitignore  CMakeLists.txt  Dockerfile  index.yaml  start.sh
chat/database/: chat.cpp  chat.h
chat/web_server/: http_request_factory.h  http_web_server.h
chat/web_server/handlers/: chat_handler.h
load_test/: get_cache.lua  get_no_cache.lua  performance.md  run_test.sh
mariadb/: Dockerfile  commands.sql  commands_1.sql
mariadb/mysql.conf.d/: 50-server.cnf
proxysql/: Dockerfile  commands.sql  proxysql.cnf
test/: Dockerfile  healthcheck.py  makevenv.sh  populate_db.py  requirements.txt  test.py
user/: CMakeLists.txt  Dockerfile  other.sh  start.sh
user/config/: config.cpp  config.h
user/database/: cache.h  database.cpp  user.cpp
user/web_server/: http_request_factory.h
user/web_server/handlers/: user_handler.h
wall/: .gitignore  CMakeLists.txt  Dockerfile  index.yaml  main.cpp  start.sh
wall/database/: wall.cpp  wall.h
wall/web_server/: http_request_factory.h  http_web_server.h
wall/web_server/handlers/: wall_handler.h
writer/: CMakeLists.txt  Dockerfile  writer_main.cpp
writer/config/: config.cpp  config.h
writer/database/: database.cpp  database.h  user.cpp
